--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>Git version GitHub Repo</h2>
     <p>New changes here TEST</p>
     <h3>Git version 2</h3>
+    <p>new changes</p>
   </body>
 </html>
